--- a/09-web-design-challenge/index.html
+++ b/09-web-design-challenge/index.html
@@ -7,23 +7,68 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+    
+    <link rel="stylesheet" href="style.css">
     <title>Landing</title>
   </head>
+
   <body>
- 
-		<div class="col-md-8">
-			<div class="box">
-          <h1>Summary: Lattitude vs. X</h1>
-          <img scr="Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
-          <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we fist pulled data fro meh OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as the explanations and descriptions of any trends and correlations witnessed.</p>				</div>
-			</div>
-		</div>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-dar bg-light">
+      <a class="navbar-brand" href="#">Latitude</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Plots
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Max Temperature</a>
+              <a class="dropdown-item" href="#">Humidity</a>
+              <a class="dropdown-item" href="#">Cloudiness</a>
+              <a class="dropdown-item" href="#">Windspeed</a>
+            </div>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Comparison</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Data</a>   
+          </li>
+        </ul>
 
+      </div>
+    </nav>
 
-
-
+    <div class="container">
+      <div class="row">
+        <!-- Summary box -->
+        <div class="col-md-8">
+          <div class="box1">
+            <h1>Summary: Lattitude vs. X</h1>
+            <hr>
+            <img class="image inline" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
+            <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we fist pulled data fro meh OpenWeatherMap API to assemble a dataset on over 500 cities.<br><br>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as the explanations and descriptions of any trends and correlations witnessed.</p>
+          </div>
+        </div>
+        <!-- Visiualizations box -->
+        <div class="col-md-4">
+          <div class="box2">
+            <h1>Visualizations</h1>
+            <hr>
+            <p>
+              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
+              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity">
+              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
+              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed">
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
