Finished formatting all pages, need to link & do git pages

--- a/09-web-design-challenge/Vis_cloudiness.html
+++ b/09-web-design-challenge/Vis_cloudiness.html
@@ -55,7 +55,7 @@
             <h1>Cloudiness</h1>
             <hr> 
             <img class="imagevis"src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
-            <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This my be due to the tilt of the earth at the time of the year this data was gathered.</p>
+            <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
           </div>
         </div>
         <!-- Visiualizations box -->
@@ -63,10 +63,10 @@
           <div class="box">
             <h1>Visualizations</h1>
             <hr>
-              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
-              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity">
-              <img class="image selected" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
-              <img class="image" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed">
+              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature" title="Max Temperature">
+              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity" title="Humidity">
+              <img class="image selectimage selected" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness" title="Cloudiness">
+              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed" title="Windspeed">
           </div>
         </div>
       </div>
