--- a/09-web-design-challenge/Comparisons.html
+++ b/09-web-design-challenge/Comparisons.html
@@ -60,22 +60,22 @@
         <div class="row">
           <div class="col-md-6 center">
             <h5 class="center"> vs. Max Temperature</h5>
-            <img class="compareimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
+            <img class="compareimage selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
           </div>
           <div class="col-md-6">
             <h5 class="center"> vs. Max Humidity</h5>
-            <img class="compareimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity">
+            <img class="compareimage selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity">
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <h5 class="center"> vs. Cloudiness</h5>
-            <img class="compareimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
+            <img class="compareimage selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
           </div>
           <div class="col-md-6">
             <h5 class="center"> vs. Wind Speed</h5>
-            <img class="compareimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed">
+            <img class="compareimage selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed">
           </div>
         </div>
       </div>  
