--- a/09-web-design-challenge/Data.html
+++ b/09-web-design-challenge/Data.html
@@ -57,7 +57,7 @@
         </div>
       <div class="row">
         <div class="col-md-12">
-          <table class="dataframe table">
+          <table class="table-responsive table">
             <thead>
               <tr style="text-align: center;">
                 <th>City_ID</th>
