--- a/09-web-design-challenge/Vis_humidity.html
+++ b/09-web-design-challenge/Vis_humidity.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Humidity</title>
   </head>
 
@@ -63,10 +63,18 @@
           <div class="box">
             <h1>Visualizations</h1>
             <hr>
+            <a href="#">
               <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature" title="Max Temperature">
+            </a>
+            <a href="#">  
               <img class="image selectimage selected" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity" title="Humidity">
-              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness" title="Cloudines">
+            </a>
+            <a href="#">
+              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness" title="Cloudiness">
+            </a>
+            <a href="#">
               <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed" title="Windspeed">
+            </a>
           </div>
         </div>
       </div>
