--- a/09-web-design-challenge/index.html
+++ b/09-web-design-challenge/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Landing</title>
 
   </head>
@@ -64,10 +64,18 @@
           <div class="box">
             <h1>Visualizations</h1>
             <hr>
-              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
-              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity">
-              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
-              <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed">
+              <a href="#">
+                <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig1.png" alt="City Latitude vs. Max Temperature">
+              </a>
+              <a href="#">
+                <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig2.png" alt="City Latitude vs. Humidity">
+              </a>
+              <a href="#">
+                <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig3.png" alt="City Latitude vs. Cloudiness">
+              </a>
+                <a href="#">
+                <img class="image selectimage" src="https://raw.githubusercontent.com/cassfolk/HW.Folkers/master/09-web-design-challenge/Resources/assets/images/Fig4.png" alt="City Latitude vs. Windspeed">
+              </a>
           </div>
         </div>
       </div>
