--- a/09-web-design-challenge/Data.html
+++ b/09-web-design-challenge/Data.html
@@ -13,32 +13,34 @@
   </head>
 
   <body>
-    <!-- Nav bar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand latcolor" href="#">Latitude</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
+      <!-- Navbar top -->
+      <div class="container-fluid">
+        <a class="navbar-brand" href="https://cassfolk.github.io/#">Latitude</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+     </div> <!--end top -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Plots
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Max Temperature</a>
-              <a class="dropdown-item" href="#">Humidity</a>
-              <a class="dropdown-item" href="#">Cloudiness</a>
-              <a class="dropdown-item" href="#">Windspeed</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="https://cassfolk.github.io/maxtemperature/">Max Temperature</a>
+              <a class="dropdown-item" href="https://cassfolk.github.io/humidity/">Humidity</a>
+              <a class="dropdown-item" href="https://cassfolk.github.io/cloudiness/">Cloudiness</a>
+              <a class="dropdown-item" href="https://cassfolk.github.io/windspeed/">Windspeed</a>
             </div> 
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Comparison</a>
+            <a class="nav-link" href="https://cassfolk.github.io/comparisons/">Comparison</a>
           </li>
           <li class="nav-item">
           <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
+            <a class="nav-link" href="https://cassfolk.github.io/data/">Data</a>
           </li>
         </ul>
       </div>
